<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff18453b">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text2"
            android:layout_centerVertical="true"
            android:paddingStart="5dp"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/pause_enabled"
            android:layout_width="wrap_content"
            android:onClick="togglePause"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text3"
            android:id="@+id/textView2"
            android:paddingStart="5dp"
            android:layout_centerVertical="true"
            android:textColorHint="#ffffffff"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/game_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_toEndOf="@+id/textView2"
            android:paddingStart="30dp"
            android:entries="@array/duration_array"
            android:prompt="@string/duration_prompt"
            android:gravity="center_vertical"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignBottom="@+id/textView2" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text4"
            android:paddingStart="5dp"
            android:layout_centerVertical="true"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/challenges_enabled"
            android:onClick="toggleChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text5"
            android:id="@+id/textView"
            android:paddingStart="5dp"
            android:layout_centerVertical="true"
            android:textColorHint="#ffffffff"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/challenge_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView"
            android:paddingStart="20dp"
            android:entries="@array/challenge_frequency_array"
            android:prompt="@string/challenge_frequency_prompt"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignTop="@+id/textView" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text6"
            android:paddingStart="5dp"
            android:layout_centerVertical="true"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/song_change_sound_enabled"
            android:onClick="changeSoundToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/song_sound_button"
            android:layout_toStartOf="@+id/song_sound_button" />

        <Button
            android:id="@+id/song_sound_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="songSoundSelection"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/sound_button"
            android:enabled="false" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text7"
            android:paddingStart="5dp"
            android:layout_centerVertical="true"
            android:textColorHint="#ffffffff"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <ToggleButton
            android:id="@+id/beer_empty_sound_enabled"
            android:onClick="beerSoundToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/beer_sound_button"
            android:layout_toStartOf="@+id/beer_sound_button" />

        <Button
            android:id="@+id/beer_sound_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="beerSoundSelection"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/sound_button"
            android:enabled="false" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text1"
            android:layout_alignParentRight="false"
            android:paddingStart="5dp"
            android:layout_centerVertical="true"
            android:textColorHint="#ffffffff"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <ToggleButton
            android:onClick="toggleOneOunce"
            android:id="@+id/one_ounce_shot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="false"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</LinearLayout>