<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff18453b"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ounces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:hint="@string/ounce_zero"
                android:paddingTop="5dp"
                android:textColor="#ffffffff"
                android:textColorHint="#ffffffff"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/ounces"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/beers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:hint="@string/zero"
                android:paddingTop="15dp"
                android:textColor="#ffffffff"
                android:textColorHint="#ffffffff"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="@string/beers"
                android:textColor="#ffffffff" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:hint="@string/zero"
                android:paddingTop="5dp"
                android:textColor="#ffffffff"
                android:textColorHint="#ffffffff"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/shots"
                android:textColor="#ffffffff"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/time_zero"
        android:textColor="#ffffffff"
        android:textColorHint="#FFFFFFFF"
        android:textSize="120sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chal_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/challenge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:textColor="#ffffffff"
        android:textColorHint="#ffffffff"
        android:textSize="20dp" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffffff" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="#ffffffff"
            android:textColorHint="#ffffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_weight="1"
            android:hint="@string/start"
            android:onClick="playButton"
            android:paddingStart="10dp"
            android:textColorHint="#ff18453b"
            android:textSize="24sp" />

        <Button
            android:id="@+id/pause_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:hint="@string/pause"
            android:onClick="pauseButton"
            android:paddingEnd="10dp"
            android:textAllCaps="false"
            android:textColorHint="#ff18453b"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>